--- a/views/index.erb
+++ b/views/index.erb
@@ -36,6 +36,7 @@
     }
 
     #results li {
+      text-transform: uppercase;
       background: #fff;
       color: #333399;
       font-size: 24px;
